--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -176,7 +176,5 @@ textarea:focus {
 
 /* Print styles */
 @media print {
-    .theme-toggle {
-        display: none;
-    }
+    /* Hide interactive elements when printing */
 }
